fix: menu alignment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,6 +9,7 @@
     height: 120px;
     flex-shrink: 0;
     background: #34005C;
+    z-index: 999;
 }
 
 .header-title {
